--- a/CookieCrunchAdventure/CookieCrunchAdventure/Info.plist
+++ b/CookieCrunchAdventure/CookieCrunchAdventure/Info.plist
@@ -22,6 +22,8 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need to know your location for cash tournaments.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
